Terminado componente topbar css

--- a/app/assets/styles/boris.scss
+++ b/app/assets/styles/boris.scss
@@ -34,7 +34,7 @@
 //   "foundation/scss/foundation/components/tabs",
 //   "foundation/scss/foundation/components/thumbs",
 //   "foundation/scss/foundation/components/tooltips",
-   "foundation/scss/foundation/components/top-bar",
+//   "foundation/scss/foundation/components/top-bar",
    "foundation/scss/foundation/components/type",
 //   "foundation/scss/foundation/components/offcanvas",
    "foundation/scss/foundation/components/visibility"
@@ -52,7 +52,6 @@
       margin: 0 auto;
       display: block;
       width: 50px;
-//      height: 50px;
       background: url(/assets/images/puff.svg) no-repeat center;
    }
 }
