--- a/app/assets/styles/frontend/components/_listProjects.scss
+++ b/app/assets/styles/frontend/components/_listProjects.scss
@@ -6,7 +6,7 @@
 
 .lp-box {
   > figure {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.33);
+//    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.33);
     margin: 0;
     padding: 0;
   }
