--- a/app/assets/styles/frontend/utils/_colours.scss
+++ b/app/assets/styles/frontend/utils/_colours.scss
@@ -55,4 +55,7 @@ $shared-icons-color: $iron;
 
 //nav principal
 $nav-ppal-color: #a1a1a1;
-$nav-ppal-active-color: #5c5c5c;
+$nav-ppal-active-color: #f0f0f0;
+
+$nav-ppal-color-medium-up: #a1a1a1;
+$nav-ppal-active-color-medium-up: #5c5c5c;
