--- a/app/assets/styles/frontend/boris.scss
+++ b/app/assets/styles/frontend/boris.scss
@@ -4,7 +4,7 @@
 //@import "foundation/scss/foundation";
 @import
 //   "foundation/scss/foundation/components/accordion",
-//   "foundation/scss/foundation/components/alert-boxes",
+   "foundation/scss/foundation/components/alert-boxes",
    "foundation/scss/foundation/components/block-grid",
 //   "foundation/scss/foundation/components/breadcrumbs",
 //   "foundation/scss/foundation/components/button-groups",
