--- a/app/assets/styles/frontend/boris.scss
+++ b/app/assets/styles/frontend/boris.scss
@@ -55,3 +55,27 @@
       background: url(/assets/images/puff.svg) no-repeat center;
    }
 }
+
+
+.pace {
+   -webkit-pointer-events: none;
+   pointer-events: none;
+
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   user-select: none;
+}
+
+.pace-inactive {
+   display: none;
+}
+
+.pace .pace-progress {
+   background: #444444;
+   position: fixed;
+   z-index: 2000;
+   top: 0;
+   right: 100%;
+   width: 100%;
+   height: 2px;
+}
