--- a/app/assets/styles/frontend/utils/_boris-font.scss
+++ b/app/assets/styles/frontend/utils/_boris-font.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "boris-v";
-  src:url("../../assets/styles/fonts/boris-v.eot");
-  src:url("../../assets/styles/fonts/boris-v.eot?#iefix") format("embedded-opentype"),
-  url("../../assets/styles/fonts/boris-v.woff") format("woff"),
-  url("../../assets/styles/fonts/boris-v.ttf") format("truetype"),
-  url("../../assets/styles/fonts/boris-v.svg#boris-v") format("svg");
+  src:url("../assets/fonts/boris-v.eot");
+  src:url("../assets/fonts/boris-v.eot?#iefix") format("embedded-opentype"),
+  url("../assets/fonts/boris-v.woff") format("woff"),
+  url("../assets/fonts/boris-v.ttf") format("truetype"),
+  url("../assets/fonts/boris-v.svg#boris-v") format("svg");
   font-weight: normal;
   font-style: normal;
 
