Added alert notification

--- a/app/assets/styles/frontend/components/_notifications.scss
+++ b/app/assets/styles/frontend/components/_notifications.scss
@@ -32,6 +32,13 @@
       color: #fff;
     }
   }
+  &.one-columns {
+    background-color: $alert-color;
+    border-color: $alert-color;
+    span {
+      color: #FFF;
+    }
+  }
 }
 
 .notification-box.ns-hide {
