--- a/app/assets/styles/frontend/utils/_colours.scss
+++ b/app/assets/styles/frontend/utils/_colours.scss
@@ -30,7 +30,7 @@ $primary-text-color: #727272;
 // We use these as default colors throughout
 $primary-color: $tuatara;
 $secondary-color: #f0f0f0;
-// $alert-color: #f04124;
+$alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
