--- a/app/assets/styles/frontend/utils/_config.scss
+++ b/app/assets/styles/frontend/utils/_config.scss
@@ -413,7 +413,7 @@ $alert-padding-top: rem-calc(12);
 // $alert-padding-bottom: $alert-padding-top;
 
 // We use these to control text style.
-// $alert-font-weight: $font-weight-normal;
+$alert-font-weight: 700;
 $alert-font-size: rem-calc(11);
 // $alert-font-color: $white;
 // $alert-font-color-alt: scale-color($secondary-color, $lightness: -66%);
